[tool.poetry]
name = "spaghetti"
version = "0.1.0"
description = ""
authors = ["Tristan Heywood <tristanheywood@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.84.1"
pandas = "^1.3.0"
numpy = "^1.21.0"
stravalib = "0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
